HTML Skeleton add to à_la_française.html and general custom on scss file

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                         <!-- THIRD ITEM -->
                         <div class="item-2">
-                                <a href="#">
+                                <a href="./à_la_française.html">
 
                                     <img src="./assets/images/restaurants/À_la_française.jpg" alt="À_la_française">
                                     <h2>À la française</h2>
