Update links la_note_enchantée on index.html and add of HTML skeleton of la_note_enchantée.html with scss.file

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                         <!-- SECOND ITEM -->
                         <div class="item-2">
-                                <a href="#">
+                                <a href="./la_note_enchantée.html">
 
                                     <img src="./assets/images/restaurants/La_note_enchantée.jpg" alt="La note La_note_enchantée">
                                     <p>Nouveau</p>
