Update of index.html last links and last set up of HTML Skeleton for le_délice_des_sens.html and scss.file

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                         <!-- FIRST ITEM -->
                         <div class="item-2">
-                                <a href="#">
+                                <a href="./la_palette_du_goût.html">
 
                                     <img src="./assets/images/restaurants/palette_du_goût.jpg" alt="La palette du goût">
                                     <p>Nouveau</p>
@@ -159,7 +159,7 @@
 
                         <!-- FOURTH ITEM -->
                         <div class="item-2">
-                                <a href="#">
+                                <a href="./le_délice_des_sens.html">
 
                                     <img src="./assets/images/restaurants/Le_délice_des_sens.jpg" alt="Le_délice_des_sens">
                                     <h2>Le délice des sens</h2>
