Flexbox on header with logo and box-shadow have been used as apply on the wireframe

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <!-- HEADER -->
-        <header>
+        <header class="header">
 
             <div id="logo">
                 <img src="./assets/images/logo/ohmyfood@2x.svg" alt="Logo">
