Try many times to fix some issues to overlap the header on section-1, the issue is fixed, perhaps later I'm gonna do some update on font-weight of font-size of the section-1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Ohmyfood</title>
 </head>
 <body>
-    <main>
+    <main
         <!-- HEADER -->
         <header class="header">
 
@@ -28,7 +28,7 @@
         <section class="section-1">
 
             <div class="location">
-                <i class="fas fa-map-marker-alt"></i><p>Paris, Belleville</p>
+                <i class="fas fa-map-marker-alt"></i> <p>Paris,   Belleville</p>
             </div>
 
         </section>
