Premise of the section-2 design

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="description">
 
-                    <h1>Réservez le menu qui <br> vous convient</h1>
+                    <h1>Réservez le menu qui <br> <span class="move-to-center">vous convient</span></h1>
                     <p>
                         Découvrez des restaurants d'exception,<br>
                         sélectionnés par nos soins.
