Trying to fix the position of elements of section-2 not working , so I'll work on in tomorrow

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 <i class="fas fa-map-marker-alt"></i> <p>Paris,   Belleville</p>
             </div>
 
-        </section>
         <!-- END OF SECTION -1 -->
 
 
@@ -40,10 +39,10 @@
 
             <div class="description">
 
-                    <h1>Réservez le menu qui <br> <span class="move-to-center">vous convient</span></h1>
+                    <h1>Réservez le menu qui <br> <span id="convenance">vous convient</span></h1>
                     <p>
                         Découvrez des restaurants d'exception,<br>
-                        sélectionnés par nos soins.
+                        <span id="selected_by">sélectionnés par nos soins.</span>
                     </p>
                     
             </div>
