Adjustment of some elements of section-3

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h1>Fonctionnement</h1>
                         <!-- FIRST ITEM -->
                         <a href="#" class="item">
-                            <span>1</span>
+                            <span id="span--1">1</span>
                             <i class="fas fa-mobile-alt"></i>
                             <h2>Choisissez un restaurant</h2>
                         </a>
@@ -80,7 +80,7 @@
                         
                         <!-- SECOND ITEM -->
                         <a href="#" class="item">
-                            <span>2</span>
+                            <span id="span--2">2</span>
                             <i class="fas fa-list-ul"></i>
                             <h2>Composez votre menu</h2>
                         </a>
@@ -88,7 +88,7 @@
 
                         <!-- THIRD ITEM -->
                         <a href="#" class="item">
-                            <span>3</span>
+                            <span id="span--3">3</span>
                             <i class="fas fa-store"></i>
                             <h2>Dégustez au restaurant</h2>
                         </a>
