Header and container are done it's possible to make some changes in future

--- a/la_palette_du_goût.html
+++ b/la_palette_du_goût.html
@@ -21,14 +21,9 @@
             <div class="back_to_homepage">
 
                 <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
-
+                <h1>ohmyfood</h1>
             </div>
 
-            <div id="logo">
-
-                <img src="./assets/images/logo/ohmyfood@2x.svg" alt="Logo">
-
-            </div>
 
         </header>
 
