Some designed have been added to visualize how to set up elements

--- a/la_palette_du_goût.html
+++ b/la_palette_du_goût.html
@@ -52,7 +52,7 @@
             <!-- STARTER -->
             <div class="starter">
 
-                        <h2>ENTRÉÉS</h2>
+                        <h2 class="starter--title">ENTRÉÉS</h2>
 
                         <!-- FIRST ITEM -->
 
@@ -128,7 +128,7 @@
              <!-- MAIN COURSE -->
              <div class="main_course">
 
-                <h2>PLATS</h2>
+                <h2 class="main_course--title">PLATS</h2>
 
                 <!-- FIRST ITEM -->
 
@@ -202,7 +202,7 @@
     <!-- DESSERTS -->
     <div class="desserts">
 
-        <h2>DESSERTS</h2>
+        <h2 class="desserts--title">DESSERTS</h2>
 
         <!-- FIRST ITEM -->
 
