The css part is almost finish there is just animation and adjustements to end up and I can move on next page

--- a/la_palette_du_goût.html
+++ b/la_palette_du_goût.html
@@ -56,7 +56,7 @@
 
                         <!-- FIRST ITEM -->
 
-                            <div class="item">
+                            <a href="#" class="item">
 
                                 <div class="item--description">
                                     <h2 class="h2">Fricassée d'escargot</h2>
@@ -71,13 +71,13 @@
                                     <i class="fas fa-check-circle"></i>
                                 </div>
 
-                            </div>
+                            </a>
 
                         <!-- END OF FIRST ITEM -->
 
                         <!-- SECOND ITEM -->
 
-                            <div class="item">
+                            <a href="#" class="item">
 
                                 <div class="item--description">
                                     <h2 class="h2">Foie gras de canard mi-cuit </h2>
@@ -92,14 +92,14 @@
                                     <i class="fas fa-check-circle"></i>
                                 </div>
 
-                            </div>
+                            </a>
 
                             <!-- END OF SECOND ITEM -->
 
 
                             <!-- THIRD ITEM -->
 
-                            <div class="item">
+                            <a href="#" class="item">
 
                                     <div class="item--description">
                                         <h2 class="h2">Oeuf au plat</h2>
@@ -114,7 +114,7 @@
                                         <i class="fas fa-check-circle"></i>
                                     </div>
 
-                            </div>
+                                </a>
 
                             <!-- END OF THIRD ITEM -->
 
@@ -132,7 +132,7 @@
 
                 <!-- FIRST ITEM -->
 
-                    <div class="item">
+                    <a href="#" class="item">
 
                         <div class="item--description">
                             <h2 class="h2">Filet de boeuf aux herbes</h2>
@@ -147,13 +147,13 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
 
-                    </div>
+                    </a>
 
                 <!-- END OF FIRST ITEM -->
 
                 <!-- SECOND ITEM -->
 
-                    <div class="item">
+                    <a href="#" class="item">
 
                         <div class="item--description">
                             <h2 class="h2">Parmentier de queue de boeuf</h2>
@@ -168,14 +168,14 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
 
-                    </div>
+                    </a>
 
                     <!-- END OF SECOND ITEM -->
 
 
                     <!-- THIRD ITEM -->
 
-                    <div class="item">
+                    <a href="#"class="item">
 
                             <div class="item--description">
                                 <h2 class="h2">Filet de turbot</h2>
@@ -190,7 +190,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
 
-                    </div>
+                        </a>
 
                     <!-- END OF THIRD ITEM -->
 
@@ -206,7 +206,7 @@
 
         <!-- FIRST ITEM -->
 
-            <div class="item">
+            <a href="#" class="item">
 
                 <div class="item--description">
                     <h2 class="h2">Paris-Brest</h2>
@@ -221,13 +221,13 @@
                     <i class="fas fa-check-circle"></i>
                 </div>
 
-            </div>
+            </a>
 
         <!-- END OF FIRST ITEM -->
 
         <!-- SECOND ITEM -->
 
-            <div class="item">
+            <a href="#" class="item">
 
                 <div class="item--description">
                     <h2 class="h2">Macaron au chocolat d'exception </h2>
@@ -242,14 +242,14 @@
                     <i class="fas fa-check-circle"></i>
                 </div>
 
-            </div>
+            </a>
 
             <!-- END OF SECOND ITEM -->
 
 
             <!-- THIRD ITEM -->
 
-            <div class="item">
+            <a href="#" class="item">
 
                     <div class="item--description">
                         <h2 class="h2">Mousse au chocolat </h2>
@@ -264,7 +264,7 @@
                         <i class="fas fa-check-circle"></i>
                     </div>
 
-            </div>
+                </a>
 
             <!-- END OF THIRD ITEM -->
 
