The .item__price hover is almost fixed the only thing left is to find how add three point on paragraph when the <p> is too long

--- a/la_palette_du_goût.html
+++ b/la_palette_du_goût.html
@@ -178,7 +178,7 @@
                     <a href="#"class="item">
 
                             <div class="item--description">
-                                <h2 class="h2">Filet de turbot</h2>
+                                <h2 class="h2">Filet de Turbot</h2>
                                 <p>Aux agrumes</p>
                             </div>
     
