Truncate effect have been added and it's responsive

--- a/la_palette_du_goût.html
+++ b/la_palette_du_goût.html
@@ -56,7 +56,7 @@
 
                         <!-- FIRST ITEM -->
 
-                            <a href="#" class="item">
+                            <a href="#" class="item ">
 
                                 <div class="item--description">
                                     <h2 class="h2">Fricassée d'escargot</h2>
@@ -79,7 +79,7 @@
 
                             <a href="#" class="item">
 
-                                <div class="item--description">
+                                <div class="item--description truncate">
                                     <h2 class="h2">Foie gras de canard mi-cuit </h2>
                                     <p>Et ses copeaux de truffe noire</p>
                                 </div>
