--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <header class="header">
 
             <div id="logo">
-                <img src="./assets/images/logo/ohmyfood@2x.svg" alt="Logo">
+                <a href="index.html"><img src="./assets/images/logo/ohmyfood@2x.svg" alt="Logo"></a>
             </div>
 
         </header>
