--- a/la_note_enchantée.html
+++ b/la_note_enchantée.html
@@ -19,9 +19,8 @@
         <header>
 
             <div class="back_to_homepage">
-
                 <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
-                <h1>ohmyfood</h1>
+                <h1><a id="back_to_homepage--2" href="index.html">ohmyfood</a></h1>
             </div>
 
 
