--- a/le_délice_des_sens.html
+++ b/le_délice_des_sens.html
@@ -14,6 +14,17 @@
 </head>
 <body>
 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZGM1EFNSY"></script>
+ <script>
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+
+ gtag('config', 'G-0ZGM1EFNSY');
+ </script>
+<!-- END OF GOOGLE ANALYTICS-->
+
     <main>
          <!-- HEADER -->
          <header>
